Configure Forking integ tests for JDK16 compatibility